# note-off

./: CMakeLists.txt  README.md
cmake/: FindnoteOff.cmake  noteOff-config.cmake
include/: CMakeLists.txt
src/: CMakeLists.txt  lide.mid  main  main.cpp  out.mid
